# InventoryManager

./: .env  .gitignore  README.md  alembic.ini  app.py  pyproject.toml  settings.gradle.kts
alembic/: env.py
app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
info/: commands.txt  requirements.txt  test.py
migrations/: env.py
migrations/versions/: 2023_11_12_1254-da5343bfa198_init_auth_tables.py
src/: __init__.py  database.py  settings.py
src/auth/: auth_config.py  exc.py  manager.py  models.py  router.py  schemas.py  token_create.py  utils.py  validation.py
src/documents/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/items/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/minio/: __init__.py  db_minio_manager.py  schemas.py
src/movements/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/photos/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/places/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/positions/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/roles/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/shipments/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/storages/: __init__.py  crud.py  dependencies.py  mixin.py  models.py  router.py  schemas.py
src/suppliers/: __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py
src/tests/: test_positions.py  test_roles.py
(+230 files in other folders)
