[tool.poetry]
name = "InventoryManagerBackend"
version = "0.1.0"
description = ""
authors = ["NyakShoot1 <danshoot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.12.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
poetry = "^1.8.2"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
minio = "^7.2.7"
docxtpl = "^0.17.0"
sqlalchemy-utils = "^0.41.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"